--- a/lib/Makefile
+++ b/lib/Makefile
@@ -30,14 +30,30 @@ include $(ECOLI)/mk/ecoli-pre.mk
 # output path with trailing slash
 O ?= build/
 
-CFLAGS  = -g -O0 -Wall -Werror -W -fPIC
+CFLAGS  = -g -O0 -Wall -Werror -W -Wextra -fPIC -Wmissing-prototypes
 CFLAGS += -I.
 
-srcs := ecoli_tk.c ecoli_malloc.c ecoli_log.c ecoli_strvec.c
-srcs += ecoli_keyval.c ecoli_test.c
-srcs += ecoli_tk_str.c ecoli_tk_seq.c ecoli_tk_space.c ecoli_tk_or.c
-srcs += ecoli_tk_empty.c ecoli_tk_int.c ecoli_tk_option.c ecoli_tk_many.c
-srcs += ecoli_tk_sh_lex.c ecoli_tk_expr.c ecoli_tk_weakref.c ecoli_tk_re_lex.c
+srcs :=
+srcs += ecoli_keyval.c
+srcs += ecoli_log.c
+srcs += ecoli_malloc.c
+srcs += ecoli_strvec.c
+srcs += ecoli_test.c
+srcs += ecoli_tk.c
+srcs += ecoli_tk_empty.c
+srcs += ecoli_tk_expr.c
+srcs += ecoli_tk_expr_test.c
+srcs += ecoli_tk_int.c
+srcs += ecoli_tk_many.c
+srcs += ecoli_tk_option.c
+srcs += ecoli_tk_or.c
+srcs += ecoli_tk_re_lex.c
+srcs += ecoli_tk_seq.c
+srcs += ecoli_tk_sh_lex.c
+srcs += ecoli_tk_space.c
+srcs += ecoli_tk_str.c
+srcs += ecoli_tk_weakref.c
+
 shlib-y-$(O)libecoli.so := $(srcs)
 
 ldflags-$(O)test = -rdynamic
