--- a/lib/Makefile
+++ b/lib/Makefile
@@ -39,23 +39,23 @@ srcs += ecoli_log.c
 srcs += ecoli_malloc.c
 srcs += ecoli_strvec.c
 srcs += ecoli_test.c
-srcs += ecoli_tk.c
-srcs += ecoli_tk_cmd.c
-srcs += ecoli_tk_empty.c
-srcs += ecoli_tk_expr.c
-srcs += ecoli_tk_expr_test.c
-srcs += ecoli_tk_int.c
-srcs += ecoli_tk_many.c
-srcs += ecoli_tk_option.c
-srcs += ecoli_tk_or.c
-srcs += ecoli_tk_re.c
-srcs += ecoli_tk_re_lex.c
-srcs += ecoli_tk_seq.c
-srcs += ecoli_tk_sh_lex.c
-srcs += ecoli_tk_space.c
-srcs += ecoli_tk_str.c
-srcs += ecoli_tk_subset.c
-srcs += ecoli_tk_weakref.c
+srcs += ecoli_node.c
+srcs += ecoli_node_cmd.c
+srcs += ecoli_node_empty.c
+srcs += ecoli_node_expr.c
+srcs += ecoli_node_expr_test.c
+srcs += ecoli_node_int.c
+srcs += ecoli_node_many.c
+srcs += ecoli_node_option.c
+srcs += ecoli_node_or.c
+srcs += ecoli_node_re.c
+srcs += ecoli_node_re_lex.c
+srcs += ecoli_node_seq.c
+srcs += ecoli_node_sh_lex.c
+srcs += ecoli_node_space.c
+srcs += ecoli_node_str.c
+srcs += ecoli_node_subset.c
+srcs += ecoli_node_weakref.c
 
 shlib-y-$(O)libecoli.so := $(srcs)
 
