--- a/lib/Makefile
+++ b/lib/Makefile
@@ -68,6 +68,7 @@ srcs += ecoli_node_str.c
 srcs += ecoli_node_subset.c
 srcs += ecoli_node_weakref.c
 srcs += ecoli_parsed.c
+srcs += ecoli_string.c
 srcs += ecoli_vec.c
 
 shlib-y-$(O)libecoli.so := $(srcs)
