new node "none" that matches nothing

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -60,6 +60,7 @@ srcs += ecoli_node_expr_test.c
 srcs += ecoli_node_file.c
 srcs += ecoli_node_int.c
 srcs += ecoli_node_many.c
+srcs += ecoli_node_none.c
 srcs += ecoli_node_once.c
 srcs += ecoli_node_option.c
 srcs += ecoli_node_or.c
