add node helpers

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -37,6 +37,7 @@ srcs += ecoli_node_expr.c
 srcs += ecoli_node_expr_test.c
 srcs += ecoli_node_dynamic.c
 srcs += ecoli_node_file.c
+srcs += ecoli_node_helper.c
 srcs += ecoli_node_int.c
 srcs += ecoli_node_many.c
 srcs += ecoli_node_none.c
