duplicate and rename keyval in dict + htable
next commit will refactorize code

--- a/include/meson.build
+++ b/include/meson.build
@@ -5,8 +5,9 @@ libecoli_headers = [
 	'ecoli_assert.h',
 	'ecoli_complete.h',
 	'ecoli_config.h',
+	'ecoli_dict.h',
 	'ecoli_init.h',
-	'ecoli_keyval.h',
+	'ecoli_htable.h',
 	'ecoli_log.h',
 	'ecoli_malloc.h',
 	'ecoli_murmurhash.h',
