--- a/src/meson.build
+++ b/src/meson.build
@@ -7,8 +7,9 @@ libecoli_sources = [
 	'ecoli_assert.c',
 	'ecoli_complete.c',
 	'ecoli_config.c',
+	'ecoli_dict.c',
 	'ecoli_init.c',
-	'ecoli_keyval.c',
+	'ecoli_htable.c',
 	'ecoli_log.c',
 	'ecoli_malloc.c',
 	'ecoli_murmurhash.c',
