add first documentation draft and framework

--- a/include/meson.build
+++ b/include/meson.build
@@ -2,6 +2,7 @@
 # Copyright 2018, Olivier MATZ <zer0@droids-corp.org>
 
 libecoli_headers = [
+	'ecoli.h',
 	'ecoli_assert.h',
 	'ecoli_complete.h',
 	'ecoli_config.h',
