meson: cleanup dependencies
Use files() everywhere possible instead of flat string lists to remain
aware of the relative paths.

Make libyaml and libedit dependencies optional. Change the way the
subdirs are visited depending on the options and dependencies
availabilities.

Signed-off-by: Robin Jarry <robin@jarry.cc>

--- a/doc/meson.build
+++ b/doc/meson.build
@@ -7,32 +7,26 @@ cdata = configuration_data()
 cdata.set('VERSION', meson.project_version())
 cdata.set('OUTPUT', join_paths(meson.build_root(), 'doc', 'api'))
 cdata.set('TOPDIR', meson.source_root())
+doxygen = find_program('doxygen')
+sphinx_build = find_program('sphinx-build')
 
-doxygen = find_program('doxygen',
-	required : get_option('build_doc'))
+doxygen_conf = configure_file(
+  input: 'Doxyfile.in',
+  output: 'Doxyfile',
+  configuration: cdata,
+  install: false)
 
-sphinx_build = find_program(
-  'sphinx-build', required: get_option('build_doc'))
+doxygen_build = custom_target(
+  'doxygen',
+  input: doxygen_conf,
+  output: 'api',
+  command: [doxygen, '@INPUT@', '@OUTPUT@'],
+  build_by_default: true,
+  install_dir: doc_install_dir)
 
-if get_option('build_doc')
-	doxygen_conf = configure_file(
-	  input: 'Doxyfile.in',
-	  output: 'Doxyfile',
-	  configuration: cdata,
-	  install: false)
-
-	doxygen_build = custom_target(
-	  'doxygen',
-	  input: doxygen_conf,
-	  output: 'api',
-	  command: [doxygen, '@INPUT@', '@OUTPUT@'],
-	  build_by_default: true,
-	  install_dir: doc_install_dir)
-
-	html_doc = custom_target('html_doc',
-		input: meson.current_source_dir(),
-		output: 'html_doc',
-		command: [sphinx_build, '@INPUT@', '@OUTPUT@'],
-		install: get_option('build_doc'),
-		install_dir: doc_install_dir)
-endif
+html_doc = custom_target('html_doc',
+	input: meson.current_source_dir(),
+	output: 'html_doc',
+	command: [sphinx_build, '@INPUT@', '@OUTPUT@'],
+	install: true,
+	install_dir: doc_install_dir)
