--- a/examples/meson.build
+++ b/examples/meson.build
@@ -1,7 +1,10 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright 2018, Olivier MATZ <zer0@droids-corp.org>
 
-subdir('readline')
-if get_option('with_yaml') and get_option('with_editline')
+readline_dep = dependency('readline', required: false)
+if readline_dep.found()
+	subdir('readline')
+endif
+if yaml_dep.found() and edit_dep.found()
 	subdir('parse-yaml')
 endif
