--- a/examples/readline/meson.build
+++ b/examples/readline/meson.build
@@ -1,17 +1,13 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright 2018, Olivier MATZ <zer0@droids-corp.org>
 
-readline_sources = [
+readline_sources = files(
 	'main.c',
-]
+)
 
-c_compiler = meson.get_compiler('c')
-readline = c_compiler.find_library('readline', required: false)
-if readline.found()
-	ecoli_readline = executable(
-		'ecoli-readline',
-		readline_sources,
-		include_directories : inc,
-		link_with : libecoli,
-		dependencies: readline)
-endif
+ecoli_readline = executable(
+	'ecoli-readline',
+	readline_sources,
+	include_directories : inc,
+	link_with : libecoli,
+	dependencies: readline_dep)
