--- a/meson.build
+++ b/meson.build
@@ -7,8 +7,8 @@ project('libecoli',
 	license : 'BSD-3-clause',
 	default_options: ['warning_level=2'])
 
-edit_dep = dependency('libedit', method: 'pkg-config')
-yaml_dep = dependency('yaml-0.1', method: 'pkg-config')
+edit_dep = dependency('libedit', required: get_option('with_editline'))
+yaml_dep = dependency('yaml-0.1', required: get_option('with_yaml'))
 
 add_global_arguments('-Wmissing-prototypes', language : 'c')
 
@@ -16,9 +16,15 @@ inc = include_directories('include')
 priv_inc = include_directories('src')
 
 subdir('src')
-subdir('test')
-subdir('examples')
-subdir('doc')
+if get_option('build_tests')
+	subdir('test')
+endif
+if get_option('build_examples')
+	subdir('examples')
+endif
+if get_option('build_doc')
+	subdir('doc')
+endif
 
 pkg_mod = import('pkgconfig')
 pkg_mod.generate(libraries : libecoli,
