--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,7 @@ project('libecoli',
 edit_dep = dependency('libedit', required: get_option('with_editline'))
 yaml_dep = dependency('yaml-0.1', required: get_option('with_yaml'))
 
-add_global_arguments('-Wmissing-prototypes', language : 'c')
+add_project_arguments('-Wmissing-prototypes', language : 'c')
 
 inc = include_directories('include')
 priv_inc = include_directories('src')
@@ -24,6 +24,13 @@ if get_option('build_examples')
 endif
 if get_option('build_doc')
 	subdir('doc')
+endif
+
+if meson.is_subproject()
+	libecoli_dep = declare_dependency(
+		link_with: libecoli,
+		include_directories: inc,
+	)
 endif
 
 pkg_mod = import('pkgconfig')
