doc: fix build with recent sphinx
Add explicit dependency to sphinx and breathe python extensions.

Fix sphinx build command.

Signed-off-by: Robin Jarry <robin@jarry.cc>

--- a/doc/meson.build
+++ b/doc/meson.build
@@ -8,25 +8,27 @@ cdata.set('VERSION', meson.project_version())
 cdata.set('OUTPUT', join_paths(meson.build_root(), 'doc', 'api'))
 cdata.set('TOPDIR', meson.source_root())
 doxygen = find_program('doxygen')
-sphinx_build = find_program('sphinx-build')
 
 doxygen_conf = configure_file(
-  input: 'Doxyfile.in',
-  output: 'Doxyfile',
-  configuration: cdata,
-  install: false)
+	input: 'Doxyfile.in',
+	output: 'Doxyfile',
+	configuration: cdata,
+	install: false)
 
 doxygen_build = custom_target(
-  'doxygen',
-  input: doxygen_conf,
-  output: 'api',
-  command: [doxygen, '@INPUT@', '@OUTPUT@'],
-  build_by_default: true,
-  install_dir: doc_install_dir)
+	'doxygen',
+	input: doxygen_conf,
+	output: 'api',
+	command: [doxygen, '@INPUT@', '@OUTPUT@'],
+	build_by_default: true,
+	install_dir: doc_install_dir)
 
-html_doc = custom_target('html_doc',
-	input: meson.current_source_dir(),
-	output: 'html_doc',
-	command: [sphinx_build, '@INPUT@', '@OUTPUT@'],
+python = import('python').find_installation('python3', modules: ['sphinx', 'breathe'])
+
+html_doc = custom_target('html',
+	input: files('conf.py'),
+	output: 'html',
+	command: [python, '-m', 'sphinx.cmd.build', meson.current_source_dir(), '@OUTPUT@'],
 	install: true,
+	build_by_default: true,
 	install_dir: doc_install_dir)
