--- a/meson.build
+++ b/meson.build
@@ -16,6 +16,10 @@ yaml_dep = dependency('yaml-0.1', required: get_option('with_yaml'))
 
 add_project_arguments('-Wmissing-prototypes', language : 'c')
 add_project_arguments('-D_GNU_SOURCE', language : 'c')
+if get_option('build_tests')
+	add_project_arguments('--coverage', language : 'c')
+	add_project_link_arguments('--coverage' , language: 'c')
+endif
 
 inc = include_directories('include')
 priv_inc = include_directories('src')
