doc: convert to markdown
Signed-off-by: Robin Jarry <robin@jarry.cc>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,7 @@ jobs:
             libyaml-dev \
             meson \
             ninja-build \
-            pkg-config \
-            python3-breathe \
-            python3-sphinx
+            pkg-config
       - uses: actions/checkout@v4
       - run: |
           meson setup \
