yaml: add node exporter - WIP
Based on the yaml import, add a node exporter.

Signed-off-by: Vincent Jardin <vjardin@free.fr>

--- a/src/meson.build
+++ b/src/meson.build
@@ -45,6 +45,7 @@ deps = []
 if yaml_dep.found()
 	libecoli_sources += files(
 		'ecoli_yaml.c',
+		'ecoli_yaml_export.c',
 	)
 	deps += [
 		yaml_dep,
