examples: fix build when libedit is not installed
This example should be disabled when examples are disabled and/or if
libedit isn't available.

Fixes: 0bba35db0038 ("examples: introduce simple-editline")
Signed-off-by: Robin Jarry <robin@jarry.cc>

--- a/examples/simple-editline/meson.build
+++ b/examples/simple-editline/meson.build
@@ -1,6 +1,11 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright 2025, Olivier MATZ <zer0@droids-corp.org>
 
+if not get_option('examples').require(edit_dep.found(),
+		error_message: 'examples require libedit').allowed()
+	subdir_done()
+endif
+
 simple_editline_sources = files(
 	'main.c',
 )
@@ -9,4 +14,5 @@ ecoli_simple_editline = executable(
 	'ecoli-simple-editline',
 	simple_editline_sources,
 	include_directories : inc,
-	link_with : libecoli)
+	link_with : libecoli,
+	dependencies: [edit_dep])
