examples: skip compilation entirely if disabled
If -Dexamples=disabled or --auto-features=disabled, we shouldn't compile
these examples.

Fixes: e601e4162737 ("example: add extension-editline")
Fixes: e7fdbd5c1bbd ("examples: add pool-editline")
Signed-off-by: Robin Jarry <robin@jarry.cc>

--- a/examples/extension-editline/meson.build
+++ b/examples/extension-editline/meson.build
@@ -1,6 +1,11 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright 2025, Olivier MATZ <zer0@droids-corp.org>
 
+if not get_option('examples').require(edit_dep.found(),
+		error_message: 'examples require libedit').allowed()
+	subdir_done()
+endif
+
 extension_editline_sources = files(
 	'main.c',
 	'node_bool_tuple.c',
